--- a/html-exam/WebContent/lesson01.html
+++ b/html-exam/WebContent/lesson01.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
+<!-- 주요 언어코드를 작성한다. lang="" 한국어 ko / 영어en / 일본어ja -->
 <html lang="ko">
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>lesson01</title>
+<meta name="keywords" content="">
+<meta name="description" content="">
 </head>
 <body>
-<P>처음 배우는 HTML+CSS</P>
+<P>처음 배우는 HTML+CSS</P> 
 <!-- href는 속성명 그리고 ""안에 있는것은 속성 값이다. -->
 <!-- google Korea라는 텍스트 안에 google.co.kr로 이동하는 하이퍼링크를 만든다. -->
 <a href="http://www.google.co.kr/">google! Korea</a>
