--- a/html-exam/WebContent/lesson02/lesson02_5.html
+++ b/html-exam/WebContent/lesson02/lesson02_5.html
@@ -1,4 +1,4 @@
-<!-- <li>를 사용하여 항목을 마크업하기 -->
+<!-- 기술목록(정의목록) 마크업 <dl> <dt> <dd>-->
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -9,17 +9,21 @@
 소개하겠습니다.">
 </head>
 <body> 
+<!-- 기술목록이란? '항목과 그 설명'이 한 세트로 된 리스트 구조를 말한다.
+"이름: 
+           홍길동" 이런식이다.
+기본 구조는 아래와 같다.
+<dl>
+<dt>이름: </dt><dd>홍길동</dd>
+</dl> -->
 <h1>★우리 집 야옹이★</h1>
 <p>우리 집 아이돌, 고양이들을 소개하겠습니다!</p>
 
-<!-- <li>는 항목 리스트에 사용되는 태그이다. -->
-<!-- <ul>과 <li>는 2개로 하나를 이루는 요소이기 때문에 각각 단독으로 사용할 수 없다. -->
 <ul>
 <li>우리 집 야옹이 소개</li>
 <li>기르는 주인 소개</li>
 <li>고양이 사진 모집</li>
 </ul>
-
 <h2>우리 집 야옹이 소개</h2>
 기르는 주인 소개
 고양이 사진 모집
@@ -32,9 +36,10 @@
 <p>눈과 귀가 크고 멋진 미남. 우는 소리조차 귀엽다.어린 시절을 원룸에서 보낸 탓인지 다른 고양이에게 관심이 없는 편이다.성격은 지극히 자기중심적. 골판지상자 모서리나 기둥에 발톱 갈기를 좋아한다.</p>
 
 ［사진］
-특징：커다란 눈과 귀. 말린 꼬리.
-성격：자기중심적.
-
+<dl>
+<dt>특징：</dt><dd>커다란 눈과 귀. 말린 꼬리.</dd>
+<dt>성격：</dt><dd>자기중심적.</dd>
+</dl>
 
 더 보기→
 
@@ -43,8 +48,10 @@
 <h3>●그레코(잿빛 털, 여자)</h3>
 <p>갓 태어났을 때는 아메리칸 쇼트헤어 같았는데 크면서 점점 잿빛 고양이로 바뀌었다. 긴 털을 가진 품종의 혈통이 좀 섞였는지 털이 부드럽고 푹신푹신하게 부풀어 있어 가족들이 털복숭이라 부르고 있다. 쉰 목소리와 관록 있는 생김새로부터는 상상할 수 없을 정도로 애교를 잘 부리고 처음 보는 사람에게도 낯을 가리지 않고 스스럼없이 다가오기 때문에 손님들이 굉장히 귀여워한다.</p>
 ［사진］
-특징：쉰 목소리. 데굴데굴 구르며 공격.
-성격：애교가 많다.엉큼함.
+<dl>
+<dt>특징：</dt><dd>쉰 목소리. 데굴데굴 구르며 공격.</dd>
+<dt>성격：</dt><dd>애교가 많다.엉큼함.</dd>
+</dl>
 
 
 더 보기→
@@ -55,9 +62,10 @@
 <p>그레코와 함께 우리 집에 온 흰색 빛이 도는 어린 고양이. 그레코와는 달리 전형적인 고양이 성격.호의적인 태도보다는 오히려 적대적인 태도를 보일 때가 많다(눈물). 그레코와 벌인 세력쟁탈전에서 패배한 후 집을 나가 지금은 거의 들고양이 신세가 되었다. 생김새는 원래 순 토종 풍으로 깨끗했었는데 밖에서 살던 중에 까마귀의 공격을 받아 한쪽 눈을 잃었다. 고고한 고양이.</p> 
 
 ［사진］
-특징：한쪽 눈. 작은 얼굴.
-성격：자존심이 강하다. 사람에게는 여왕처럼 군다.
-
+<dl>
+<dt>특징：</dt><dd>쪽 눈. 작은 얼굴.</dd>
+<dt>성격：</dt><dd>존심이 강하다. 사람에게는 여왕처럼 군다.</dd>
+</dl>
 
 더 보기→
 
@@ -67,11 +75,12 @@
 
 
 <h2>기르는 주인 소개</h2>
-
-H.N.：--
-하는 일 ：java공부 열심히 하는중
-mail：zx3620@gmail.com
-Web ：https://github.com/zx3620
+<dl>
+<dt>H.N.：</dt><dd>--</dd>
+<dt>하는 일 ：</dt><dd>java공부 열심히 하는중</dd>
+<dt>mail：</dt><dd>zx3620@gmail.com</dd>
+<dt>Web ：</dt><dd>https://github.com/zx3620</dd>
+</dl>
 
 
 
