--- a/src/main/webapp/lesson04/entry4.html
+++ b/src/main/webapp/lesson04/entry4.html
@@ -7,62 +7,62 @@
 </head>
 <body>
 
-<form id="entryForm" action="#" method="post">
-<table border="1">
-<tr>
-<th>고양이 이름</th>
-<td><input type="text" name="cat-name"></td>
-</tr>
-<tr>
-<th>주소</th>
-<td>
-<select name="pref">
-<option value="" selected>선택해 주세요.</option>
-<option value="서울">서울</option>
-<option value="광주">광주</option>
-<option value="대구">대구</option>
-<option value="대전">대전</option>
-<option value="부산">부산</option>
-<option value="울산">울산</option>
-<option value="제주도">제주도</option>
-</select>
-</td>
-</tr>
-<tr>
-<th>성별</th>
-<!-- <input type="radio" name="데이터 그룹명" value="송신데이터" checked>남자 -->
-<!-- type="radio"는 여러 선택지 중 하나만 선택하라는 '라디오버튼'이다. -->
-<!-- checked 명령어는 처음부터 값이 선택된 상태로 놔두라는 뜻이다. -->
-<td>
-<input type="radio" name="sex" value="남자" checked>남자
-<input type="radio" name="sex" value="여자">여자
-</td>
-</tr>
-<tr>
-<th>좋아하는 것</th>
-<td>
-<input type="checkbox" name="like1" value="생선">생선
-<input type="checkbox" name="like2" value="고기">고기
-<input type="checkbox" name="like3" value="우유">우유
-<input type="checkbox" name="like4" value="바삭바삭한 것">바삭바삭한 것
-<input type="checkbox" name="like5" value="단것">단것
-</td>
-</tr>
-<tr>
-<th>사진</th>
-<td></td>
-</tr><tr>
-<th>기르는 주인이름</th>
-<td><input type="text" name="name"></td>
-</tr><tr>
-<th>메일주소</th>
-<td><input type="email" name="email"></td>
-</tr>
-<tr>
-<th>코멘트</th>
-<td><textarea name="comment" row="4" cols="40"></textarea></td>
-</tr>
-</table>
-</form>
+    <form id="entryForm" action="#" method="post">
+        <table border="1">
+            <tr>
+                <th>고양이 이름</th>
+                <td><input type="text" name="cat-name"></td>
+            </tr>
+            <tr>
+                <th>주소</th>
+                <td><select name="pref">
+                        <option value="" selected>선택해 주세요.</option>
+                        <option value="서울">서울</option>
+                        <option value="광주">광주</option>
+                        <option value="대구">대구</option>
+                        <option value="대전">대전</option>
+                        <option value="부산">부산</option>
+                        <option value="울산">울산</option>
+                        <option value="제주도">제주도</option>
+                </select></td>
+            </tr>
+            <tr>
+                <th>성별</th>
+                <!-- <input type="radio" name="데이터 그룹명" value="송신데이터" checked>남자 -->
+                <!-- type="radio"는 여러 선택지 중 하나만 선택하라는 '라디오버튼'이다. -->
+                <!-- checked 명령어는 처음부터 값이 선택된 상태로 놔두라는 뜻이다. -->
+                <td><input type="radio" name="sex" value="남자"
+                    checked>남자 <input type="radio" name="sex"
+                    value="여자">여자</td>
+            </tr>
+            <tr>
+                <th>좋아하는 것</th>
+                <td>
+                    <!-- type="checkbox"의 기본서식 --> <!-- <intput type="checkbox" name="데이터명" value="송신 데이터" -->
+                    <input type="checkbox" name="like1" value="생선">생선
+                    <input type="checkbox" name="like2" value="고기">고기
+                    <input type="checkbox" name="like3" value="우유">우유
+                    <input type="checkbox" name="like4" value="바삭바삭한 것">바삭바삭한
+                    것 <input type="checkbox" name="like5" value="단것">단것
+                </td>
+            </tr>
+            <tr>
+                <th>사진</th>
+                <td></td>
+            </tr>
+            <tr>
+                <th>기르는 주인이름</th>
+                <td><input type="text" name="name"></td>
+            </tr>
+            <tr>
+                <th>메일주소</th>
+                <td><input type="email" name="email"></td>
+            </tr>
+            <tr>
+                <th>코멘트</th>
+                <td><textarea name="comment" row="4" cols="40"></textarea></td>
+            </tr>
+        </table>
+    </form>
 </body>
 </html>
