--- a/src/main/webapp/javascript05/exam01.html
+++ b/src/main/webapp/javascript05/exam01.html
@@ -2,14 +2,17 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>반복문</title>
+<title>배열</title>
 </head>
 <body>
 
 <script type="text/javascript">
-    for(var i = 0; i < 1000; i++) {
-    document.write("코딩 애브리바디 "+ i*2 +"</br>")
-    }
+
+function get_members() {
+    return number=['가나다', '바보', '크크'];
+	
+}
+
 </script> 
 
 </body>
