--- a/src/main/webapp/javascript05/exam03.html
+++ b/src/main/webapp/javascript05/exam03.html
@@ -2,14 +2,17 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>변수</title>
+<title>배열</title>
 </head>
 <body>
 
 <script type="text/javascript">
-    var a = 1;
-    alert(a);
-</script>
+
+var li = ['a', 'b', 'c', 'd', 'e'];
+li.unshift('f');
+alert(li);
+
+</script> 
 
 </body>
-</html>
+</html> 
