--- a/src/main/webapp/javascript01/exam04.html
+++ b/src/main/webapp/javascript01/exam04.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>javascript example</title>
+<title>hello world</title>
 </head>
 <body>
 <script type="text/javascript">
